# scarti

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  weekly.yml
pipeline/: pyproject.toml
pipeline/src/scarti/: catalog.yaml  cli.py  mailer.py  models.py  pipeline.py  render.py
pipeline/src/scarti/detect/: __init__.py  detector.py  mod_zscore.py  stl.py  yoy.py
pipeline/src/scarti/narrate/: __init__.py  narrator.py  style.py
pipeline/src/scarti/sources/: __init__.py  bankit.py  base.py  istat.py  sdmx.py
pipeline/tests/: test_detect.py
site/: astro.config.mjs  package.json
site/src/: content.config.ts
site/src/components/: AnomalyTag.astro  Markdown.astro  ReportList.astro
site/src/components/charts/: AnomalyChart.tsx
site/src/content/reports/: 2026-w16-sample.json
site/src/data/series/: 2026-w16-sample.json
site/src/i18n/: strings.ts
site/src/layouts/: BaseLayout.astro
site/src/lib/: mail.ts  report.ts  supabase.ts
site/src/pages/: archivio.astro  index.astro  iscriviti.astro  metodo.astro
site/src/pages/api/: confirm.ts  subscribe.ts  unsubscribe.ts
site/src/pages/en/: archivio.astro  index.astro  iscriviti.astro  metodo.astro
site/src/pages/en/report/: [slug].astro
site/src/pages/report/: [slug].astro
site/src/styles/: global.css
supabase/migrations/: 0001_subscribers.sql
